--- a/book.bib
+++ b/book.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @Article{AanhetRot2012,
-  author          = {aan het Rot, Marije and Hogenelst, Koen and Schoevers, Robert A.},
+  author          = {{Aan het Rot}, Marije and Hogenelst, Koen and Schoevers, Robert A.},
   title           = {Mood disorders in everyday life: A systematic review of experience sampling and ecological momentary assessment studies.},
   journal         = {Clinical psychology review},
   year            = {2012},
@@ -57,6 +57,18 @@
   publisher={Wiley Online Library}
 }
 
+@article{Bai2016,
+  author = {Bai, Jiawei and Di, Chongzhi and Xiao, Luo and Evenson, Kelly R. and LaCroix, Andrea Z. and Crainiceanu, Ciprian M. and Buchner, David M.},
+  doi = {10.1371/journal.pone.0160644},
+  issn = {19326203},
+  journal = {PLoS ONE},
+  pmid = {27513333},
+  title = {{An activity index for raw accelerometry data and its comparison with other activity metrics}},
+  year = {2016}
+}
+
+
+
 @Article{Bates2015,
   title = {Fitting inear Mixed-Effects Models using {lme4}},
   author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
@@ -94,7 +106,7 @@
 
 
 @article{Blaauw2016,
-  author = {Blaauw, F. J. and Schenk, H. M. and Jeronimus, B. F. and van der Krieke, L. and de Jonge, P. and Aiello, M. and Emerencia, A. C.},
+  author = {Blaauw, F. J. and Schenk, H. M. and Jeronimus, B. F. and {Van der Krieke}, L. and {De Jonge}, P. and Aiello, M. and Emerencia, A. C.},
   doi = {10.1016/j.jbi.2016.08.001},
   isbn = {1532-0480 (Electronic) 1532-0464 (Linking)},
   issn = {15320464},
@@ -124,6 +136,7 @@
   address   = {Groningen},
   isbn      = {978-94-6259-832-4}
 }
+
 
 
 @article{Borsboom2013,
@@ -229,7 +242,7 @@
 
 @article{collip2011social,
   title={Social world interactions: how company connects to paranoia},
-  author={Collip, D and Oorschot, M and Thewissen, V and Van Os, J and Bentall, R and Myin-Germeys, Inez},
+  author={Collip, D and Oorschot, M and Thewissen, V and {Van Os}, J and Bentall, R and Myin-Germeys, Inez},
   journal={Psychological medicine},
   volume={41},
   number={5},
@@ -310,7 +323,7 @@
 
 
 @article{Dakos2008,
-  author = {Dakos, Vasilis and Scheffer, Marten and van Nes, Egbert H and Brovkin, Victor and Petoukhov, Vladimir and Held, Hermann},
+  author = {Dakos, Vasilis and Scheffer, Marten and {Van Nes}, Egbert H and Brovkin, Victor and Petoukhov, Vladimir and Held, Hermann},
   doi = {10.1073/pnas.0802430105},
   issn = {0027-8424},
   journal = {Proceedings of the National Academy of Sciences of the United States of America},
@@ -438,7 +451,7 @@ year = {2018}
 
 
 @Book{Ekker2013,
-  author   = {Anton Ekker and Barbara van Rest},
+  author   = {Anton Ekker and Barbara {van Rest}},
   title    = {{Medische apps, is certificeren nodig? In 7 stappen naar een CE-markering voor uw app}},
   year = {2013},
   url = {https://www.nictiz.nl/wp-content/uploads/2013/05/13005-Whitepaper-medische-apps.pdf},
@@ -461,7 +474,7 @@ year = {2018}
 
 
 @article{Emerencia2016,
-  author = {Emerencia, Ando Celino and Van Der Krieke, Lian and Bos, Elisabeth H. and De Jonge, Peter and Petkov, Nicolai and Aiello, Marco},
+  author = {Emerencia, Ando Celino and {Van Der Krieke}, Lian and Bos, Elisabeth H. and {De Jonge}, Peter and Petkov, Nicolai and Aiello, Marco},
   doi = {10.1109/JBHI.2015.2402280},
   isbn = {2168-2194 VO - 20},
   issn = {21682194},
@@ -556,7 +569,7 @@ year = {2018}
 
 @article{epskamp2018d,
   title={Personalized network modeling in psychopathology: The importance of contemporaneous and temporal connections},
-  author={Epskamp, Sacha and van Borkulo, Claudia D and van der Veen, Date C and Servaas, Michelle N and Isvoranu, Adela-Maria and Riese, Harri{\"e}tte and Cramer, Ang{\'e}lique O J},
+  author={Epskamp, Sacha and {Van Borkulo}, Claudia D and {Van der Veen}, Date C and Servaas, Michelle N and Isvoranu, Adela-Maria and Riese, Harri{\"e}tte and Cramer, Ang{\'e}lique O J},
   journal={Clinical Psychological Science},
   volume={6},
   number={3},
@@ -644,7 +657,7 @@ year = {2018}
 
 
 @article{DeGeus1995,
-author = {de Geus, Eco J.C. and Willemsen, Gonneke H.M. and Klaver, Coert H.A.M. and van Doornen, Lorenz J.P.},
+author = {{De Geus}, Eco J.C. and Willemsen, Gonneke H.M. and Klaver, Coert H.A.M. and {Van Doornen}, Lorenz J.P.},
 doi = {10.1016/0301-0511(95)05137-6},
 isbn = {0301-0511 (Print)$\backslash$n0301-0511 (Linking)},
 issn = {03010511},
@@ -659,7 +672,7 @@ year = {1995}
 
 @incollection{Geus1996,
   title = {Ambulatory assessment of parasympathetic/sympathetic balance by impedance cardiography},
-  author = {de Geus, E.J.C. and van Doornen, L.J.P.},
+  author = {{De Geus}, E.J.C. and {Van Doornen}, L.J.P.},
   year = {1996},
   language = {English},
   pages = {141--164},
@@ -668,7 +681,7 @@ year = {1995}
 }
 
 @article{Goertz2018,
-  author = {Go{\"{e}}rtz, Yvonne M J and Looijmans, Milou and Prins, Judith B and   Janssen, Daisy J A and Thong, Melissa S Y and Peters, Jeannette B and Burtin, Chris and Meertens-Kerris, Yvonne and Coors, Arnold and Muris, Jean W M and Sprangers, Mirjam A G and Wouters, Emiel F M and Vercoulen, Jan H and Spruit, Martijn A},
+  author = {Go{\"{e}}rtz, Yvonne M J and Looijmans, Milou and Prins, Judith B and Janssen, Daisy J A and Thong, Melissa S Y and Peters, Jeannette B and Burtin, Chris and Meertens-Kerris, Yvonne and Coors, Arnold and Muris, Jean W M and Sprangers, Mirjam A G and Wouters, Emiel F M and Vercoulen, Jan H and Spruit, Martijn A},
   doi = {10.1136/bmjopen-2018-021745},
   isbn = {2018021745},
   issn = {2044-6055},
@@ -772,6 +785,20 @@ year = {1995}
   publisher={Wiley Online Library}
 }
 
+
+@article{Hildebrand2014,
+  author = {Hildebrand, Maria and {Van Hees}, Vincent T. and Hansen, Bjorge Hermann and Ekelund, Ulf},
+  doi = {10.1249/MSS.0000000000000289},
+  isbn = {0000000000000},
+  issn = {15300315},
+  journal = {Medicine and Science in Sports and Exercise},
+  keywords = {Activity Monitors,Adults,Children,Objective Monitoring,Physical Activity},
+  pmid = {24887173},
+  title = {{Age group comparability of raw accelerometer output from wrist-and hip-worn monitors}},
+  year = {2014}
+}
+
+
 @book{horton2015,
   title = {Using R and RStudio for data management, statistical analysis, and graphics},
   author = {Horton, Nicholas J and Kleinman, Ken},
@@ -818,7 +845,7 @@ year = {1995}
 
 @article{jongeneel2018,
   title={Reducing distress and improving social functioning in daily life in people with auditory verbal hallucinations: Study protocol for the ‘Temstem’randomised controlled trial},
-  author={Jongeneel, Alyssa and Scheffers, Dorien and Tromp, Nynke and Nuij, Chani and Delespaul, Philippe and Riper, Heleen and Van Der Gaag, Mark and van den Berg, David},
+  author={Jongeneel, Alyssa and Scheffers, Dorien and Tromp, Nynke and Nuij, Chani and Delespaul, Philippe and Riper, Heleen and {Van Der Gaag}, Mark and {Van den Berg}, David},
   journal={BMJ open},
   volume={8},
   number={3},
@@ -853,7 +880,7 @@ year = {1995}
 
 @article{kemmeren2016,
   title={Effectiveness of blended depression treatment for adults in specialised mental healthcare: study protocol for a randomised controlled trial},
-  author={Kemmeren, LL and Van Schaik, DJF and Riper, H and Kleiboer, AM and Bosmans, Judith E and Smit, Johannes H},
+  author={Kemmeren, LL and {Van Schaik}, DJF and Riper, H and Kleiboer, AM and Bosmans, Judith E and Smit, Johannes H},
   journal={BMC psychiatry},
   volume={16},
   number={1},
@@ -901,7 +928,7 @@ year = {1995}
 
 
 @article{VanDerKrieke2016,
-  author = {Krieke, Lian Van Der and Jeronimus, Bertus F. and Blaauw, Frank J. and Wanders, Rob B.K. and Emerencia, Ando C. and Schenk, Hendrika M. and Vos, Stijn De and Snippe, Evelien and Wichers, Marieke and Wigman, Johanna T.W. and Bos, Elisabeth H. and Wardenaar, Klaas J. and {De Jonge}, Peter},
+  author = {{Van Der Krieke}, Lian and Jeronimus, Bertus F. and Blaauw, Frank J. and Wanders, Rob B.K. and Emerencia, Ando C. and Schenk, Hendrika M. and Vos, Stijn De and Snippe, Evelien and Wichers, Marieke and Wigman, Johanna T.W. and Bos, Elisabeth H. and Wardenaar, Klaas J. and {De Jonge}, Peter},
   doi = {10.1002/mpr.1495},
   eprint = {1106.4512},
   isbn = {0022-006X (Print)$\backslash$n0022-006X (Linking)},
@@ -974,7 +1001,7 @@ year = {1995}
 
 @article{Lindert2018,
   title={Bright environmental light ameliorates deficient subjective ‘liking’in insomnia: An experience sampling study},
-  author={te Lindert, Bart HW and Itzhacki, Jacob and van der Meijden, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and Van Someren, Eus JW},
+  author={te Lindert, Bart HW and Itzhacki, Jacob and {Van der Meijden}, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and {Van Someren}, Eus JW},
   journal={Sleep},
   volume={41},
   number={4},
@@ -1033,7 +1060,7 @@ year = {1999}
 
 @article{Meijden2016,
   title={Individual differences in sleep timing relate to melanopsin-based phototransduction in healthy adolescents and young adults},
-  author={van Der Meijden, Wisse P and Van Someren, Jamie L and Te Lindert, Bart HW and Bruijel, Jessica and Van Oosterhout, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and Van Someren, Eus JW},
+  author={{Van Der Meijden}, Wisse P and {Van Someren}, Jamie L and {Te Lindert}, Bart HW and Bruijel, Jessica and {Van Oosterhout}, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and {Van Someren}, Eus JW},
   journal={Sleep},
   volume={39},
   number={6},
@@ -1101,7 +1128,7 @@ year = {1999}
 
 
 @article{Nuij2018,
-  author = {Nuij, Chani and van Ballegooijen, Wouter and Ruwaard, Jeroen and de Beurs, Derek and Mokkenstorm, Jan and van Duijn, Erik and de Winter, Remco F.P. and O'Connor, Rory C. and Smit, Jan H. and Riper, Heleen and Kerkhof, Ad},
+  author = {Nuij, Chani and {Van Ballegooijen}, Wouter and Ruwaard, Jeroen and {de Beurs}, Derek and Mokkenstorm, Jan and van Duijn, Erik and {de Winter}, Remco F.P. and O'Connor, Rory C. and Smit, Jan H. and Riper, Heleen and Kerkhof, Ad},
   doi = {10.1016/J.INVENT.2018.04.005},
   issn = {2214-7829},
   journal = {Internet Interventions},
@@ -1141,7 +1168,7 @@ year = {1999}
 }
 
 @article{Penninx2008,
-  author = {Penninx, Brenda W J H and Beekman, Aartjan T F and Smit, Johannes H. and Zitman, Frans G. and Nolen, Willem A. and Spinhoven, Philip and Cuijpers, Pim and de Jong, Peter J. and van Marwijk, Harm W J and Assendelft, Willem J J and van der Meer, Klaas and Verhaak, Peter and Wensing, Michel and de Graaf, Ron and Hoogendijk, Witte J. and Ormel, Johan and van Dyck, Richard and {NESDA Research Consortium}},
+  author = {Penninx, Brenda W J H and Beekman, Aartjan T F and Smit, Johannes H. and Zitman, Frans G. and Nolen, Willem A. and Spinhoven, Philip and Cuijpers, Pim and de Jong, Peter J. and {Van Marwijk}, Harm W J and Assendelft, Willem J J and {Van der Meer}, Klaas and Verhaak, Peter and Wensing, Michel and de Graaf, Ron and Hoogendijk, Witte J. and Ormel, Johan and {Van Dyck}, Richard and {NESDA Research Consortium}},
   doi = {10.1002/mpr.256},
   issn = {1049-8931},
   journal = {International journal of methods in psychiatric research},
@@ -1204,7 +1231,7 @@ year = {1999}
 
 @article{pot2016,
   title={Effect of virtual reality exposure therapy on social participation in people with a psychotic disorder (VRETp): Study protocol for a randomized controlled trial},
-  author={Pot-Kolder, Roos and Veling, Wim and Geraets, Chris and van der Gaag, Mark},
+  author={Pot-Kolder, Roos and Veling, Wim and Geraets, Chris and {Van der Gaag}, Mark},
   journal={Trials},
   volume={17},
   number={1},
@@ -1215,7 +1242,7 @@ year = {1999}
 
 @article{pot2018,
   title={Virtual-reality-based cognitive behavioural therapy versus waiting list control for paranoid ideation and social avoidance in patients with psychotic disorders: a single-blind randomised controlled trial},
-  author={Pot-Kolder, Roos MCA and Geraets, Chris NW and Veling, Wim and van Beilen, Marije and Staring, Anton BP and Gijsman, Harm J and Delespaul, Philippe AEG and van der Gaag, Mark},
+  author={Pot-Kolder, Roos MCA and Geraets, Chris NW and Veling, Wim and {Van Beilen}, Marije and Staring, Anton BP and Gijsman, Harm J and Delespaul, Philippe AEG and {Van der Gaag}, Mark},
   journal={The Lancet Psychiatry},
   volume={5},
   number={3},
@@ -1498,7 +1525,7 @@ year = {1999}
 
 
 @Article{VanBallegooijen2016,
-  author    = {van Ballegooijen, Wouter and Ruwaard, Jeroen and Karyotaki, Eirini and Ebert, David D. and Smit, Johannes H. and Riper, Heleen},
+  author    = {{Van Ballegooijen}, Wouter and Ruwaard, Jeroen and Karyotaki, Eirini and Ebert, David D. and Smit, Johannes H. and Riper, Heleen},
   title     = {{Reactivity to smartphone-based ecological momentary assessment of depressive symptoms (MoodMonitor): Protocol of a randomised controlled trial}},
   journal   = {BMC Psychiatry},
   year      = {2016},
@@ -1516,7 +1543,7 @@ year = {1999}
 
 @inproceedings{vanBreda2016,
   title={A feature representation learning method for temporal datasets},
-  author={van Breda, Ward and Hoogendoorn, Mark and Eiben, AE and Andersson, Gerhard and Riper, Heleen and Ruwaard, Jeroen and Vernmark, Kristofer},
+  author={{Van Breda}, Ward and Hoogendoorn, Mark and Eiben, AE and Andersson, Gerhard and Riper, Heleen and Ruwaard, Jeroen and Vernmark, Kristofer},
   booktitle={Computational Intelligence (SSCI), 2016 IEEE Symposium Series on},
   pages={1--8},
   year={2016},
@@ -1525,7 +1552,7 @@ year = {1999}
 
 @inproceedings{vanBreda2016_exploring,
   title={Exploring and comparing machine learning approaches for predicting mood over time},
-  author={van Breda, Ward and Pastor, Johnno and Hoogendoorn, Mark and Ruwaard, Jeroen and Asselbergs, Joost and Riper, Heleen},
+  author={{Van Breda}, Ward and Pastor, Johnno and Hoogendoorn, Mark and Ruwaard, Jeroen and Asselbergs, Joost and Riper, Heleen},
   booktitle={International Conference on Innovation in Medicine and Healthcare},
   pages={37--47},
   year={2016},
@@ -1533,7 +1560,7 @@ year = {1999}
 }
 
 @article{VanBreda2018,
-  author = {van Breda, Ward and Bremer, Vincent and Becker, Dennis and Hoogendoorn,   Mark and Funk, Burkhardt and Ruwaard, Jeroen and Riper, Heleen},
+  author = {{Van Breda}, Ward and Bremer, Vincent and Becker, Dennis and Hoogendoorn,   Mark and Funk, Burkhardt and Ruwaard, Jeroen and Riper, Heleen},
   doi = {10.1016/j.invent.2017.08.003},
   isbn = {22147829 (ISSN)},
   issn = {22147829},
@@ -1547,7 +1574,7 @@ year = {1999}
 
 
 @Article{VanderKrieke2015,
-  author = {van der Krieke, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and de Jonge, Peter}, 
+  author = {{Van der Krieke}, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and {de Jonge}, Peter}, 
   title = {Ecological Momentary Assessments and Automated Time Series Analysis to Promote Tailored Health Care: A Proof-of-Principle Study},
   journal = {JMIR Research Protocols},
   year = {2015},
@@ -1560,7 +1587,7 @@ year = {1999}
 }
 
 @Article{VandeLeemput2014,
-  author  = {van de Leemput, I. A. and Wichers, M. and Cramer, A. O. J. and Borsboom, D. and Tuerlinckx, F. and Kuppens, P. and van Nes, E. H. and Viechtbauer, W. and Giltay, E. J. and Aggen, S. H. and Derom, C. and Jacobs, N. and Kendler, K. S. and van der Maas, H. L. J. and Neale, M. C. and Peeters, F. and Thiery, E. and Zachar, P. and Scheffer, M.},
+  author  = {{Van de Leemput}, I. A. and Wichers, M. and Cramer, A. O. J. and Borsboom, D. and Tuerlinckx, F. and Kuppens, P. and {Van Nes}, E. H. and Viechtbauer, W. and Giltay, E. J. and Aggen, S. H. and Derom, C. and Jacobs, N. and Kendler, K. S. and {Van der Maas}, H. L. J. and Neale, M. C. and Peeters, F. and Thiery, E. and Zachar, P. and Scheffer, M.},
   title   = {{Critical slowing down as early warning for the onset and termination of depression}},
   journal = {Proceedings of the National Academy of Sciences},
   year    = {2014},
@@ -1575,7 +1602,7 @@ year = {1999}
 
 
 @article{Rijsbergen2012,
-  author = {Rijsbergen, Gerard D Van and Bockting, Claudi L H and Berking, Matthias and   Koeter, Maarten W J and Schene, Aart H},
+  author = {{Van Rijsbergen}, Gerard D and Bockting, Claudi L H and Berking, Matthias and Koeter, Maarten W J and Schene, Aart H},
   doi = {10.1371/journal.pone.0046796},
   journal = {Plos One},
   number = {10},
@@ -1630,7 +1657,7 @@ year = {1999}
 
 
 @Article{VandeVen2017,
-  author          = {van de Ven, Pepijn and O'Brien, Hugh and Henriques, Ricardo and Klein, Michel and Msetfi, Rachel and Nelson, John and Rocha, Artur and Ruwaard, Jeroen and O'Sullivan, Donal and Riper, Heleen},
+  author          = {{Van de Ven}, Pepijn and O'Brien, Hugh and Henriques, Ricardo and Klein, Michel and Msetfi, Rachel and Nelson, John and Rocha, Artur and Ruwaard, Jeroen and O'Sullivan, Donal and Riper, Heleen},
   title           = {{ULTEMAT: A mobile framework for smart ecological momentary assessments and interventions}},
   journal         = {Internet Interventions},
   year            = {2017},
@@ -1644,7 +1671,7 @@ year = {1999}
 
 @article{VanHeest2014,
   title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: An evaluation on four continents},
-  author = {van Hees, Vincent T and  Fang, Zhou and  Langford, Joss and  Assah,Felix and Mohammad, A and da Silva, Inacio C and  Trenell, Michael I and  White, Tom and  Wareham, Nicholas J and  Brage, Soren},
+  author = {{Van Hees}, Vincent T and  Fang, Zhou and  Langford, Joss and  Assah,Felix and Mohammad, A and da Silva, Inacio C and  Trenell, Michael I and  White, Tom and  Wareham, Nicholas J and  Brage, Soren},
   doi = {10.1152/japplphysiol.00421.2014},
   journal = {Journal of Applied Physiology},
   volume = {117},
@@ -1656,7 +1683,7 @@ year = {1999}
 
 @article{VanHeest2015,
   title = {A novel, open access method to assess sleep duration using a wrist-worn accelerometer},
-  author = {van Hees, Vincent T and  Sabia, Severine and Anderson, Kirstie N  and  Denton, Sarah J and  Oliver, James and  Catt, Michael and  Abell, Jesica G and  Kivimaki, Mika and  Trenell, Michael I and  Singh-Manoux, Archana},
+  author = {{Van Hees}, Vincent T and  Sabia, Severine and Anderson, Kirstie N  and  Denton, Sarah J and  Oliver, James and  Catt, Michael and  Abell, Jesica G and  Kivimaki, Mika and  Trenell, Michael I and  Singh-Manoux, Archana},
   doi = {10.1371/journal.pone.0142533},
   journal = {PLoS One},
   volume = {10},
@@ -1667,7 +1694,7 @@ year = {1999}
 
 
 @Article{Vanrijsbergen2014,
-  author    = {van Rijsbergen, Gerard D. and Burger, Huibert and Hollon, Steven D. and Elgersma, Hermien J. and Kok, Gemma D. and Dekker, Jack and de Jong, Peter J. and Bockting, Claudi L.H.},
+  author    = {{Van Rijsbergen}, Gerard D. and Burger, Huibert and Hollon, Steven D. and Elgersma, Hermien J. and Kok, Gemma D. and Dekker, Jack and de Jong, Peter J. and Bockting, Claudi L.H.},
   title     = {{How do you feel? Detection of recurrent Major Depressive Disorder using a single-item screening tool}},
   journal   = {Psychiatry Research},
   year      = {2014},
@@ -1711,7 +1738,7 @@ year = {1999}
 
 @article{Versluis2016,
   title={Changing mental health and positive psychological well-being using ecological momentary interventions: A systematic review and meta-analysis},
-  author={Versluis, Anke and Verkuil, Bart and Spinhoven, Philip and van der Ploeg, Melanie M and Brosschot, Jos F},
+  author={Versluis, Anke and Verkuil, Bart and Spinhoven, Philip and {Van der Ploeg}, Melanie M and Brosschot, Jos F},
   journal={Journal of medical Internet research},
   volume={18},
   number={6},
@@ -1731,7 +1758,7 @@ year = {1999}
   }
 
 @Article{Walz2014,
-  author  = {Walz, Laura C. and Nauta, Maaike H. and aan het Rot, Marije},
+  author  = {Walz, Laura C. and Nauta, Maaike H. and {Aan het Rot}, Marije},
   title   = {{Experience sampling and ecological momentary assessment for studying the daily lives of patients with anxiety disorders: A systematic review}},
   journal = {Journal of Anxiety Disorders},
   year    = {2014},
@@ -1745,7 +1772,7 @@ year = {1999}
 
 @article{warmerdam2012,
   title={Innovative ICT solutions to improve treatment outcomes for depression: the ICT4Depression project.},
-  author={Warmerdam, Lisanne and Riper, Heleen and Klein, Michel CA and van de Ven, Pepijn and Rocha, Artur and Henriques, Mario Ricardo and Tousset, Eric and Silva, Hugo and Andersson, Gerhard and Cuijpers, Pim},
+  author={Warmerdam, Lisanne and Riper, Heleen and Klein, Michel CA and {Van de Ven}, Pepijn and Rocha, Artur and Henriques, Mario Ricardo and Tousset, Eric and Silva, Hugo and Andersson, Gerhard and Cuijpers, Pim},
   journal={Annual Review of Cybertherapy and Telemedicine},
   volume={181},
   number={1},
@@ -1815,7 +1842,7 @@ year = {1999}
 }
 
 @Article{Wichers2011,
-  author    = {Wichers, M. and Simons, C. J. P. and Kramer, I. M. A. and Hartmann, J. A. and Lothmann, C. and Myin-Germeys, I. and van Bemmel, A. L. and Peeters, F. and Delespaul, Ph. and van Os, J.},
+  author    = {Wichers, M. and Simons, C. J. P. and Kramer, I. M. A. and Hartmann, J. A. and Lothmann, C. and Myin-Germeys, I. and {Van Bemmel}, A. L. and Peeters, F. and Delespaul, Ph. and {Van Os}, J.},
   title     = {{Momentary assessment technology as a tool to help patients with depression help themselves}},
   journal   = {Acta Psychiatrica Scandinavica},
   year      = {2011},
@@ -1843,7 +1870,7 @@ year = {1999}
 }
 
 @Article{Wichers2012,
-  author    = {Wichers, Marieke and Peeters, Frenk and Rutten, Bart P. F. and Jacobs, Nele and Derom, Catherine and Thiery, Evert and Delespaul, Philippe and van Os, Jim},
+  author    = {Wichers, Marieke and Peeters, Frenk and Rutten, Bart P. F. and Jacobs, Nele and Derom, Catherine and Thiery, Evert and Delespaul, Philippe and {Van Os}, Jim},
   title     = {{A time-lagged momentary assessment study on daily life physical activity and affect}},
   journal   = {Health Psychology},
   year      = {2012},
