--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Ecological Momentary Assessment in Mental Health Research"
-subtitle: "A Practical Introduction, With Examples in R"
+subtitle: "A Practical Introduction, With Examples in R (1st edition)"
 author: ["Jeroen Ruwaard", "Lisa Kooistra", "Melissa Thong"]
 date: "`r Sys.Date()`"
 cover-image: "images/cover.png"
@@ -15,13 +15,42 @@ researchers who are planning Ecological Momentary Assessment (EMA) studies."
 
 # Preface {-}
 
-Given known limitations of retrospective self-report questionnaires, such as recall bias and poor generalisability of assessment results to real-life situations, mental health researchers increasingly adopt alternative assessment methods. One of the promising alternatives is Ecological Momentary Assessment (EMA), in which emotions and behaviours are repeatedly sampled in everyday life, through wearable electronic devices.
+Given known limitations of retrospective self-report questionnaires, such as
+recall bias and poor generalisability of assessment results to real-life
+situations, mental health researchers increasingly adopt alternative assessment
+methods. One of the promising alternatives is Ecological Momentary Assessment
+(EMA), in which emotions and behaviours are repeatedly sampled in everyday life,
+through wearable electronic devices.
 
-Repeated measurement can reveal important characteristics of the dynamics of phenomena, as illustrated by the cover of this book. With EMA, we can tap into mental health processes that were, up to very recently, unavailable to scientific research. 
+Repeated measurement can reveal important characteristics of the dynamics of
+phenomena, as illustrated by the cover of this book. With EMA, we can tap into
+mental health processes that were, up to very recently, unavailable to
+scientific research.
 
-Conducting an EMA study, however, can be challenging. Researchers face a dazzling array of options related to the electronic wearables, outcomes selection, study design considerations, ethical and regulatory constraints, data management, statistical analysis, and study reporting. Although standards are emerging, clear guidelines for EMA research do not - at present - exist.  EMA studies have unique characteristics that require specialist research skills, related to study design and statistical analysis. This manual was written to fill this gap.
+Conducting an EMA study, however, can be challenging. Researchers face a
+dazzling array of options related to the electronic wearables, outcomes
+selection, study design considerations, ethical and regulatory constraints, data
+management, statistical analysis, and study reporting. Although standards are
+emerging, clear guidelines for EMA research do not - at present - exist. EMA
+studies have unique characteristics that require specialist research skills,
+related to study design and statistical analysis. This manual was written to
+fill this gap.
 
-The manual provides a practical introduction to EMA-research. It was written to aid beginning researchers of the Amsterdam School of Public Health (APH), who are looking for practical advice in conducting EMA studies. The manual provides an overview of EMA instruments, outcomes, methods and analytical techniques, guidelines for EMA-studies, and a catalogue of EMA research in the APH consortium.
+The manual provides a practical introduction to EMA-research. It was written to
+aid beginning researchers of the Amsterdam School of Public Health (APH), who
+are looking for practical advice in conducting EMA studies. The manual provides
+an overview of EMA instruments, outcomes, methods and analytical techniques,
+guidelines for EMA-studies, and a catalogue of EMA research in the APH
+consortium.
 
-This manual was written in Bookdown [@R-bookdown_book; @R-bookdown]. Sources are freely available at 'github', via https://github.com/jruwaard/aph_ema_handbook. Please post your comments and suggestions there, or via e-mail, through aph.ema@ggzingeest.nl.
+This manual was written in Bookdown [@R-bookdown\_book; @R-bookdown]. Sources
+are freely available at 'github', via
+<https://github.com/jruwaard/aph_ema_handbook>. Please post your comments and
+suggestions there, or via e-mail, through <aph.ema@ggzingeest.nl>.
 
+This manual will be continously updated. In citations, please include explicit 
+build dates, as in:
+
+Ruwaard, J., Kooistra, L. and Thong, M. (2018). *Ecological Momentary Assessment
+in Mental Health Research: A Practical Introduction, With Examples in R (1st
+edition - build `r Sys.Date()`)*. Amsterdam: APH Mental Health. 
