--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -5,8 +5,10 @@
 \usepackage{pdfpages}
 \usepackage{booktabs}
 \usepackage{makeidx}
+
 \usepackage{float}
 \floatplacement{figure}{H}
 \makeindex
+\usepackage[nottoc]{tocbibind}
 
 \frontmatter
