--- a/R-package-catalogue.Rmd
+++ b/R-package-catalogue.Rmd
@@ -1,7 +1,10 @@
 
 # R Packages for EMA Research {#rcat}
 
-Many R packages exist that can help you in the management and analysis of EMA data. In this chapter, a selection of these packages is discussed. For each, we provide a summary description, a code example code, and pointers to further documentation, to give you a head start in using the packages for your work.
+Many R packages exist that can help you in the management and analysis of EMA
+data. In this chapter, a selection of these packages is discussed. For each, we
+provide a summary description, a code example code, and pointers to further
+documentation, to give you a head start in using the packages for your work.
 
 Table: (\#tab:rcat) List of R packages that are useful in EMA research.
 
@@ -42,8 +45,7 @@ Table: (\#tab:rcat) List of R packages that are useful in EMA research.
 +-----------------+-------------------+-----------------------------------------+
 | Spatio-temporal | adehabitatHR      | Developed for home range estimation of  |
 | analysis        |                   | wild animals from GPS data. Useful for  |
-|                 |                   | human data as well (see Chapter         |
-|                 |                   | \@ref(homerange)).                      | 
+|                 |                   | human data as well.                     | 
 +-----------------+-------------------+-----------------------------------------+
 | Symptom Networks| autovarCore       | Automate the construction of vector     |     
 |                 |                   | autoregressive models.                  |
@@ -60,11 +62,19 @@ Table: (\#tab:rcat) List of R packages that are useful in EMA research.
 
 ## Accelerometry
 
-Accelerometer data need considerable pre-processing before final analyses can be run. Raw data have to be read in from a variety of brand-specific file formats, data have to re-calibrated on a per-device basis, non-wear periods have to detected, and summarizing measures, such as activity counts and energy-expenditure measures, have to be calculated from imputed triangular (x, y, x) data, often in several time windows (i.e., epochs). 
+Accelerometer data need considerable pre-processing before final analyses can be
+run. Raw data have to be read in from a variety of brand-specific file formats,
+data have to re-calibrated on a per-device basis, non-wear periods have to
+detected, and summarizing measures, such as activity counts and
+energy-expenditure measures, have to be calculated from imputed triangular (x,
+y, x) data, often in several time windows (i.e., epochs). 
 
 ### Package GENEAread
 
-GENEActive, sold by Activinsights, is a wrist-worn tri-axial accelerometer that is often used in clinical research studies. With package ***GENEAread*** [@R_GENEAread], raw data can be imported into R for further processing, as illustrated below.    
+GENEActive, sold by Activinsights, is a wrist-worn tri-axial accelerometer that
+is often used in clinical research studies. With package **GENEAread**
+[@R_GENEAread], raw data can be imported into R for further processing, as
+illustrated below.   
 
 ```{r out.with = "100%", fig.asp = .4, fig.cap = "Raw sensor data of a GENEActive wrist-worn tri-axial accelerometer (down-sampled from 100Hz to 5Hz).", message = FALSE, warning = FALSE}
 # Reading raw GENEActive data.
@@ -89,13 +99,17 @@ ggplot(d, aes(x = timestamp, y = value)) +
 ### Package 'GGIR'
 \index{Packages!GGIR}
 
-Package *GGIR* [@R-GGIR] is a package to pre-process raw accelerometry data from three brands of wearables that are widely used in sleep and physical activity research: [GENEActiv](https://www.geneactiv.org/), [ActiGraph](http://actigraphcorp.com/) and [Axivity](http://axivity.com/).
+Package *GGIR* [@R-GGIR] is a package to pre-process raw accelerometry data
+from three brands of wearables that are widely used in sleep and physical
+activity research: [GENEActiv](https://www.geneactiv.org/),
+[ActiGraph](http://actigraphcorp.com/) and [Axivity](http://axivity.com/).
 
 
 ### Package 'PhysicalActivity'
 \index{Packages!PhysicalActivity}
 
-Package ***'PhysicalActivity'*** [@R-PhysicalActivity] provides an alternative to package 'GGIR', when ActiGraph data are available.
+Package *'PhysicalActivity'* [@R-PhysicalActivity] provides an alternative to
+package 'GGIR', when ActiGraph data are available.
 
 ```{r fig15a, fig.cap="Activity Counts (5-minute windows), in a Three-day Accelerometer data set.", out.width = "100%", fig.asp = .4}
 # Plotting activity counts.
@@ -111,15 +125,22 @@ ggplot(d, aes(x = as.POSIXct(TimeStamp), y = counts)) +
   xlab("Time") + ylab("Activity Counts")
 ```
 
+
 ## Data management & Visual Exploration
 \index{Packages!tidyverse}
 
-The tidyverse is a collection of well-designed packages, authored by the team behind RStudio, that together add a consistent, modern, and efficient extension of base R functionalities. The tidyverse includes popular packages such as "ggplot2" (for plotting), "haven" (to read SPSS files), "dplyr" (for data manipulation), and many more (see: http://tidyverse.org for a full list).
+The *tidyverse* is a collection of well-designed packages, authored by the team
+behind RStudio, that together add a consistent, modern, and efficient extension
+of base R functionalities. The tidyverse includes popular packages such as
+"ggplot2" (for plotting), "haven" (to read SPSS files), "dplyr" (for data
+manipulation), and many more (see: <http://tidyverse.org> for a full list).
 
 ### Package `dplyr`
 \index{Packages!dplyr}
 
-Package ***'dplyr'*** [@R-dplyr] implements the 'split-apply-combine'-strategy. With 'dplyr', elementary data manipulations can be e chained (using the pipe operator '%>%') to elegantly implement complex data transformations. 
+Package *'dplyr'* [@R-dplyr] implements the 'split-apply-combine'-strategy.
+With 'dplyr', elementary data manipulations can be e chained (using the pipe
+operator '%\>%') to elegantly implement complex data transformations. 
 
 ```{r cs15c}
 # Aggregate data by ID, through a 'pipe'.
@@ -135,14 +156,26 @@ b <- as_tibble(d) %>%
   summarize(mean_score = mean(score))
 ```
 
-A good introduction to dplyr can be found in the book 'R for Data Science' [@wickham2016r], which can be freely accessed online (http://r4ds.had.co.nz/).
+A good introduction to dplyr can be found in the book 'R for Data Science'
+[@wickham2016r], which can be freely accessed online
+(<http://r4ds.had.co.nz/>).
+
 
 ### Package 'ggplot2'
 \index{Packages!ggplot2}
 
-Package ***'ggplot2*** [@wickham2016ggplot2] provides a collection of high-level plotting commands with which graphs can be build up in layers. It is based on 'The Grammar of Graphics' [@wilkinson2006], an influential analysis of the structure of scientific graphs. Systematic introductions are available on the [the tidyverse website](http://ggplot2.tidyverse.org/), and in the book 'ggplot2: Elegant Graphics for Data Analysis' [@wickham2016ggplot2].
+Package *'ggplot2* [@wickham2016ggplot2] provides a collection of high-level
+plotting commands with which graphs can be build up in layers. It is based on
+'The Grammar of Graphics' [@wilkinson2006], an influential analysis of the
+structure of scientific graphs. Systematic introductions are available on the
+[the tidyverse website](http://ggplot2.tidyverse.org/), and in the book
+'ggplot2: Elegant Graphics for Data Analysis' [@wickham2016ggplot2].
 
-The example below illustrates how graphs are layered. In the first step, a coordinate system is set up. In step 2, all time/scores points are plotted. In step 3, a smoothed line is fitted through these points. Finally, in step 4, the graph is split on a variable ID (a subject identifier), to show individual trajectories.
+The example below illustrates how graphs are layered. In the first step, a
+coordinate system is set up. In step 2, all time/scores points are plotted. In
+step 3, a smoothed line is fitted through these points. Finally, in step 4, the
+graph is split on a variable ID (a subject identifier), to show individual
+trajectories.
 
 ```{r cs15d, fig.cap = "Plotting layers with ggplot2", out.width = '45%', fig.asp = .4, fig.show = "hold"}
 # Simple ggplot example.
@@ -172,7 +205,7 @@ g + facet_wrap(~ ID)
 \index{Packages!haven}
 \index{SPSS}
 
-With package ***haven*** [@R-haven], SPSS, STATA and SAS files can be read into R.
+With package *haven* [@R-haven], SPSS, STATA and SAS files can be read into R.
 
 ```{r cs15e}
 # Read SPSS data
@@ -188,9 +221,13 @@ attributes(d$Species)
 \index{Datetime variables}
 \index{Packages!lubridate}
 
-EMA data analyses frequently require manipulations of datetime variables. For this, package ***lubridate*** [@R-lubridate], which provides many functions for common date and datetime operations, can be very useful. 
+EMA data analyses frequently require manipulations of datetime variables. For
+this, package *lubridate* [@R-lubridate], which provides many functions for
+common date and datetime operations, can be very useful.
 
-In the code snippet below, for example, the 'round_date' function is used to calculate the ENMO value from raw tri-axial accelerometer data, in 15-minute epoch windows.
+In the code snippet below, for example, the 'round\_date' function is used to
+calculate the ENMO value from raw tri-axial accelerometer data, in 15-minute
+epoch windows.
 
 ```{r cs15f}
 # Rounding dates.
@@ -212,17 +249,26 @@ d <- d %>% group_by(id, epoch) %>%
 knitr::kable(head(d))
 ```
 
-To learn more about handling dates and times with 'lubridate', [Chapter 16](http://r4ds.had.co.nz/dates-and-times.html) of the book 'R for Data Science' [@wickham2016r] provides a good introduction.
+To learn more about handling dates and times with 'lubridate',
+[Chapter 16](http://r4ds.had.co.nz/dates-and-times.html) of the book 'R for Data
+Science' [@wickham2016r] provides a good introduction.
 
 
 ## Mixed-effects modeling
+\index{mixed effects}
 
-Several R-packages for mixed-effects modelling exist. The most popular are package **nlme** [@R-nlme] and package ***lme4** [@Bates2015]. Both packages are actively used, as both provide unique functionalities. 
+Several R-packages for mixed-effects modelling exist. The most popular are
+package *nlme* [@R-nlme] and package *lme4* [@Bates2015]. Both packages are
+actively used, as both provide unique functionalities.
+
 
 ### nlme
 \index{Packages!nlme}
 
-Package **nlme** is introduced in Chapter \@ref(lmm). It is an older package (in comparison to package lme4), that is still used a lot because it provides options to model correlational structures that are not implemented (yet) in lme4.
+Package *nlme* is introduced in Chapter \@ref(lmm). It is an older package (in
+comparison to package lme4), that is still used a lot because it provides
+options to model correlational structures that are not implemented (yet) in
+lme4.
 
 ```{r cs15g, nlme_example}
 # Fit a linear mixed model, with lme.
@@ -235,7 +281,10 @@ fixef(fm)
 ### lme4
 \index{Packages!lme4}
 
-Package **lme4** [@Bates2015] is a faster R-reimplementation of the mixed-effects model. With large data sets and complex hierarchical models, this package should probably be preferred. As can be seen below, model specifications in 'lmer' are different from model specifications in 'lme'. 
+Package *lme4* [@Bates2015] is a faster R-reimplementation of the
+mixed-effects model. With large data sets and complex hierarchical models, this
+package should probably be preferred. As can be seen below, model specifications
+in 'lmer' are different from model specifications in 'lme'.
 
 ```{r cs15h, lme4_example, eval = TRUE}
 # Fit a linear mixed model, with lme.
@@ -250,7 +299,11 @@ fixef(fm)
 ### Package 'simr'
 \index{Packages!simr}
 
-With package 'simr' [@Green2016], power of mixed-effects models can be determined via simulation. As illustrated below, the procedure requires the researcher to define the "true" parameters of a mixed model, and a single data set. Then, function 'simPower' can be used to simulate new datasets and tests (of a specified parameter in the model), to determine the power of the test. 
+With package 'simr' [@Green2016], power of mixed-effects models can be
+determined via simulation. As illustrated below, the procedure requires the
+researcher to define the "true" parameters of a mixed model, and a single data
+set. Then, function 'simPower' can be used to simulate new datasets and tests
+(of a specified parameter in the model), to determine the power of the test.
 
 ```{r cs15i}
 # Power analysis of a two-group repeated measures design
@@ -291,7 +344,13 @@ powerSim(model1,
 ## Symptom Network Analysis
 \index{Symptom networks}
 
-When EMA is used to tap various symptoms, network analysis can reveal the dynamic interplay between these symptoms (see Chapter \@ref(networks). Various packages exist to fit these networks in R. With these packages, it is relatively easy to fit a graphical network on multivariate data sets. If you are interested in conducting a network analysis, be sure to visit the Psycho-systems website, at http://psychosystems.org. 
+When EMA is used to tap various symptoms, network analysis can reveal the
+dynamic interplay between these symptoms [@Borsboom2013]. Various packages
+exist to fit these networks in R. With these packages, it is relatively easy to
+fit a graphical network on multivariate data sets. If you are interested in
+conducting a network analysis, be sure to visit the Psycho-systems website, at
+<http://psychosystems.org>.
+
 
 ### Package 'autovarCore`
 \index{Packages!autovarCore}
@@ -299,9 +358,18 @@ When EMA is used to tap various symptoms, network analysis can reveal the dynami
 
 \index{Vector autoregressive models}
 
-Vector autoregressive (VAR) models can be used to detect lagged relationships between multiple timeseries. In VAR, each variable is modelled as a linear function of past values (lags) of itself and of present and past values of other variables. When EMA is used to capture multiple phenomena over time, VAR can provide insight in how these phenomena interact. One challenge in VAR modelling is that many alternative models potentially exist, Package ***'autovarCore'*** [@R-autovarCore] was developed to help researchers to find the VAR model with the best fit to a given timeseries data set.
+Vector autoregressive (VAR) models can be used to detect lagged relationships
+between multiple timeseries. In VAR, each variable is modelled as a linear
+function of past values (lags) of itself and of present and past values of other
+variables. When EMA is used to capture multiple phenomena over time, VAR can
+provide insight in how these phenomena interact. One challenge in VAR modelling
+is that many alternative models potentially exist, Package *'autovarCore'*
+[@R-autovarCore] was developed to help researchers to find the VAR model with
+the best fit to a given timeseries data set.
 
-In the (unrealistic) example below, function 'autovar' is used to detect that changes in depression are positively related to past (lag 1) values of activity, in a simulated data set: 
+In the (unrealistic) example below, function 'autovar' is used to detect that
+changes in depression are positively related to past (lag 1) values of activity,
+in a simulated data set:
 
 ```{r cs15k, eval = TRUE}
 # Autovar analysis.
@@ -322,15 +390,22 @@ models_found <- autovarCore::autovar(d, selected_column_names = c('activity', 'd
 summary(models_found[[1]]$varest$varresult$depression)
 ```
 
-AutovarCore is a simplified version of a more extensive package ***autovar*** [@[@R-autovarCore], which was used in several publications [@VanderKrieke2015, @Emerencia2016]. Further information can be found on [http://autovar.nl](https://autovar.nl/) and [http://autovarcore.nl](https://autovarcore.nl/) 
+AutovarCore is a simplified version of a more extensive package *autovar*
+[@[@R-autovarCore], which was used in several publications
+[@VanderKrieke2015, @Emerencia2016]. Further information can be found on
+[http://autovar.nl](https://autovar.nl/) and
+[http://autovarcore.nl](https://autovarcore.nl/)
 
 
 ### Package 'qgraph`
 \index{Packages!qgraph}
 
-Package ***qgraph*** [@Epskamp2012] can be used to fit, visualize and analyze graphical networks.
+Package *'qgraph'* [@Epskamp2012] can be used to fit, visualize and analyze
+graphical networks.
 
-In the example below, qgraph is used to fit a network on the 'Critical Slowing Down' (CSD) data set, which is included in package 'emaph' (see Chapter \@ref(csd) and Chapter \@ref(networks)). 
+In the example below, qgraph is used to fit a network on the 'Critical Slowing
+Down' (CSD) data set, which is included in package 'emaph' (see Chapter
+\@ref(csd)).
 
 ```{r cs15l, out.width = "100%", fig.asp = .4, message = FALSE, warning = FALSE, fig.cap="Network of mood items from CSD data set"}
 # Fitting a network, with qgraph.
@@ -357,9 +432,19 @@ g <- qgraph(cor_auto(d, detectOrdinal = FALSE),
 ### Package 'bootnet'
 \index{Packages!bootnet}
 
-In the interpretation of fitted network plots, it is important to take the stability of the network into account. Intuitively, networks that are fit on small sample data sets will be less stable than networks based on large data sets. One solution is to fit a large number of networks on subsets of the original data, through bootstrapping. In stable networks, the variance edges estimations will be small, while in unstable networks, the variance will be high. This idea is implemented in package ***bootnet***  [@Epskamp2018a]. 
+In the interpretation of fitted network plots, it is important to take the
+stability of the network into account. Intuitively, networks that are fit on
+small sample data sets will be less stable than networks based on large data
+sets. One solution is to fit a large number of networks on subsets of the
+original data, through bootstrapping. In stable networks, the variance of edges
+estimations will be small, while in unstable networks, the variance will be
+large. This idea is implemented in package *'bootnet'* [@Epskamp2018a].
 
-Below, the stability of the network that was fit in the previous example is examined with bootnet: fifty networks are fit, based on fifty bootstrapped samples. In the results plot, the red line marks the strength of the edges in the full sample, while grey confidence intervals mark the distribution of the edge weights in the bootstraps. 
+Below, the stability of the network that was fit in the previous example is
+examined with bootnet: fifty networks are fit, based on fifty bootstrapped
+samples. In the results plot, the red line marks the strength of the edges in
+the full sample, while grey confidence intervals mark the distribution of the
+edge weights in the bootstraps.
 
 ```{r cs15m, out.width = "100%", fig.asp = .4}
 # A bootstrapped network. 
@@ -376,8 +461,16 @@ plot(results, order = "mean")
 
 ### Package 'lomb'
 \index{Lomb-Scargle periodogram}
+\index{unevenly-sampled timeseries}
 
-Disturbances in circadian rhythms have been related to depressive symptoms [see, e.g., @Saeb2015]. With so-called periodograms, these circadian rhythms can be detected in EMA data. Standard analysis techniques, however, expect regular timeseries, in which data are sampled at equidistant intervals. EMA data, typically, are not equidistant. One solution to this problem is to use the Lomb-Scargle periodogram procedure [@Lomb1976], which can be applied to unevenly-sampled timeseries as well. Package ***lomb*** [@ruf1999] implements this procedure.
+Disturbances in circadian rhythms have been related to depressive symptoms
+[see, e.g., @Saeb2015]. With so-called periodograms, these circadian rhythms
+can be detected in EMA data (see Chapter \@ref(features)). Standard analysis
+techniques, however, expect regular timeseries, in which data are sampled at
+equidistant intervals. EMA data, typically, are not equidistant. One solution to
+this problem is to use the Lomb-Scargle periodogram procedure [@Lomb1976],
+which can be applied to unevenly-sampled timeseries as well. Package *'lomb'*
+[@ruf1999] implements this procedure.
 
 ```{r cs15n, out.width='98%'}
 # Calculating a Lomb-Scargle periodogram.
