--- a/instruments.Rmd
+++ b/instruments.Rmd
@@ -1,23 +1,49 @@
 # EMA instruments {#instruments}
 \index{EMA instruments} 
 
-Collection of EMA data has come a long way since the written diary. With technological advances, current EMA data are more likely to be collected through smart or wearable devices, connected to the internet. The various methods of EMA are developed often from distinct assessment targets [@Shiffman2008]. For example, a smart device will be useful for collecting data on subjective states or behaviors, whereas wearable devices are more suited to collect physiological data. Below are points to consider when deciding on a suitable EMA instrument, gleaned from the past experiences of APH researchers.
+Collection of EMA data has come a long way since the written diary. With
+technological advances, current EMA data are more likely to be collected through
+smart or wearable devices, connected to the internet. The various methods of EMA
+are developed often from distinct assessment targets [@Shiffman2008]. For
+example, a smart device will be useful for collecting data on subjective states
+or behaviors, whereas wearable devices are more suited to collect physiological
+data. Below are points to consider when deciding on a suitable EMA instrument,
+gleaned from the past experiences of APH researchers.
 
 ## General considerations 
 \index{General considerations}
 
 ### Costs new development vs known player
 
-When considering a platform for collecting EMA data, do you choose a platform developed by a known player or consider creating one of your own? Using a currently available platform has its advantages but it might not have the flexibility to meet your research needs. For example, the EMA application might not be adapted to include items specific to your research. If you decide to create a new platform for your study, keep time and financial resources in mind, and make sure that you have a strong development team in place.
+When considering a platform for collecting EMA data, do you choose a platform
+developed by a known player or consider creating one of your own? Using a
+currently available platform has its advantages but it might not have the
+flexibility to meet your research needs. For example, the EMA application might
+not be adapted to include items specific to your research. If you decide to
+create a new platform for your study, keep time and financial resources in mind,
+and make sure that you have a strong development team in place.
 
 ### Low-tech versus high-tech
 
-Technology has greatly increased the methods of EMA data collection. Nevertheless, it is worth considering whether your study needs to have an advanced method of data collection. Maybe the humble written diary is sufficient for your study needs. If so, you might save yourself from the technical difficulties that experienced EMA researchers know all to well. Modern EMA platforms, on the other hand, can be very efficient data collection tools that can save the researcher and the participants a lot of time. Careful assessment of options through field testing will give you the information you need to decide on the most suitable data collection method. 
+Technology has greatly increased the methods of EMA data collection.
+Nevertheless, it is worth considering whether your study needs to have an
+advanced method of data collection. Maybe the humble written diary is sufficient
+for your study needs. If so, you might save yourself from the technical
+difficulties that experienced EMA researchers know all to well. Modern EMA
+platforms, on the other hand, can be very efficient data collection tools that
+can save the researcher and the participants a lot of time. Careful assessment
+of options through field testing will give you the information you need to
+decide on the most suitable data collection method.
 
 ### Access to a back-office 
 \index{Back-office} 
 
-An important consideration when deciding on an EMA platform is the autonomy available to the researcher to set up and run the EMA study. Does the platform include a backoffice? Some EMA platforms do allow configuration or customization to the needs of the researcher. Platforms such as MoviSense and Illumivu, for example, allow researchers to define items and sample schedules, enrol and monitor participants and downloadthe data once the study is completed.
+An important consideration when deciding on an EMA platform is the autonomy
+available to the researcher to set up and run the EMA study. Does the platform
+include a backoffice? Some EMA platforms do allow configuration or customization
+to the needs of the researcher. Platforms such as MoviSense and Illumivu, for
+example, allow researchers to define items and sample schedules, enrol and
+monitor participants and downloadthe data once the study is completed.
 
 ```{r movisensbackoffice, echo = FALSE, fig.cap = "Movisens sample scheme editor (left) and App Screenshots (right)", out.width = '100%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
 knitr::include_graphics(c(
@@ -26,57 +52,125 @@ knitr::include_graphics(c(
 
 ### Validation and reliability
 
-Questions can also arise regarding the validity of EMA. Items used in subjective EMA have often not undergone rigorous psychometric testing, unlike traditional paper questionnaires. Also, EMA software are developed using algorithms which are not known or unavailable to the researcher to test for validity.
+Questions can also arise regarding the validity of EMA. Items used in subjective
+EMA have often not undergone rigorous psychometric testing, unlike traditional
+paper questionnaires. Also, EMA software are developed using algorithms which
+are not known or unavailable to the researcher to test for validity.
 
 ###  Data access
 \index{GENEActiv}
 \index{Fitbit}
 
-If planning on using a commercial EMA platform, it is important to clarify whether the researcher has access to the raw data or is the data aggregated before provision to the researcher (e.g., GENEActiv versus Fitbit). If the researcher has access to the raw data, how easily accessible are the data? Could the data be downloaded directly from the server of the EMA platform?
+If planning on using a commercial EMA platform, it is important to clarify
+whether the researcher has access to the raw data or is the data aggregated
+before provision to the researcher (e.g., GENEActiv versus Fitbit). If the
+researcher has access to the raw data, how easily accessible are the data? Could
+the data be downloaded directly from the server of the EMA platform?
 
 ### Demands on time     
 
-Subjective EMA can be burdensome to participants as data are collected multiple times a day for an extended period. In order to ensure continued participation, it is important that researchers have procedures and resources in place to manage and assist study participants. Besides preparing a study protocol, it is also necessary to have a manual on how to operate the EMA device. Considerable time also needs to be invested in the training of participants; how does EMA work, how is it implemented in the device, and what is expected from the participant when prompts are made? The researcher might also have to factor in the time needed to contact the participant, when data collection starts (e.g. the following day after start of study) - to address possible problems -, or after data collection -  to debrief the participant and to assist the participant in de-installing the app.  
+Subjective EMA can be burdensome to participants as data are collected multiple
+times a day for an extended period. In order to ensure continued participation,
+it is important that researchers have procedures and resources in place to
+manage and assist study participants. Besides preparing a study protocol, it is
+also necessary to have a manual on how to operate the EMA device. Considerable
+time also needs to be invested in the training of participants; how does EMA
+work, how is it implemented in the device, and what is expected from the
+participant when prompts are made? The researcher might also have to factor in
+the time needed to contact the participant, when data collection starts (e.g.
+the following day after start of study) - to address possible problems -, or
+after data collection - to debrief the participant and to assist the participant
+in de-installing the app.
 
 
 ## Technical considerations
 
 ### Internet access
-Is access to internet or WIFI an integral part of the collection process? For example, the EMA platform does not offer an app but sends an alert with a link to complete an online survey. This means that the participant needs to have online access following the alert. Otherwise, this will lead to a missed data collection. Also, if the server of the platform is down, the participant will not be able to access the online survey following an alert. 
+Is access to internet or WIFI an integral part of the collection process? For
+example, the EMA platform does not offer an app but sends an alert with a link
+to complete an online survey. This means that the participant needs to have
+online access following the alert. Otherwise, this will lead to a missed data
+collection. Also, if the server of the platform is down, the participant will
+not be able to access the online survey following an alert.
 
-If an app is available, would the data collected be stored locally on a device before being uploaded to the server when in the vicinity of internet access or WIFI?  
+If an app is available, would the data collected be stored locally on a device
+before being uploaded to the server when in the vicinity of internet access or
+WIFI?
 
 
 ### Device limitations
 
-Ensure there is adequate local storage on device, in the event that uploading of data to a central server might be hindered. EMA studies can generate a tremendous amount of data which needs adequate storage, be it in cloud or locally on a central server. If using cloud storage or from a commercial entity, this raises the following questions the ownership of the server and the data, and also the location of the server.     
+Ensure there is adequate local storage on device, in the event that uploading of
+data to a central server might be hindered. EMA studies can generate a
+tremendous amount of data which needs adequate storage, be it in cloud or
+locally on a central server. If using cloud storage or from a commercial entity,
+this raises the following questions the ownership of the server and the data,
+and also the location of the server.
 
-As EMA data could be collected using apps or in modern smartphone (e.g. GPS tracking), a consideration would be whether to use participants' own device or to provide a device for the study. If providing a dedicated study device, there are upfront costs of purchasing the devices and their accessories (e.g. battery chargers). Also, the costs of sending/returning of devices and potential loss of device needs to be factored in. 
+As EMA data could be collected using apps or in modern smartphone (e.g. GPS
+tracking), a consideration would be whether to use participants' own device or
+to provide a device for the study. If providing a dedicated study device, there
+are upfront costs of purchasing the devices and their accessories (e.g. battery
+chargers). Also, the costs of sending/returning of devices and potential loss of
+device needs to be factored in.
 
-These financial factors are a non-issue if participants use their own devices. Instead there are other potential problems, namely that of compatibility of the smart devices. Currently some apps are available either only on IoS or Android. Besides considering the make of the participants device, one also needs to consider the model. Older models might not have the feature needed for the EMA collection. Another potential issue associated with using own devices is adequate memory/storage capacity, i.e. to install the EMA app and collect the data.         
+These financial factors are a non-issue if participants use their own devices.
+Instead there are other potential problems, namely that of compatibility of the
+smart devices. Currently some apps are available either only on IoS or Android.
+Besides considering the make of the participants device, one also needs to
+consider the model. Older models might not have the feature needed for the EMA
+collection. Another potential issue associated with using own devices is
+adequate memory/storage capacity, i.e. to install the EMA app and collect the
+data.
 
-Regardless of using own or a dedicated device, keep in mind that apps do have software upgrades which researchers need to be aware of and inform participants (especially if participant is using own device).
+Regardless of using own or a dedicated device, keep in mind that apps do have
+software upgrades which researchers need to be aware of and inform participants
+(especially if participant is using own device).
 
 
 ## Participant perspective
 
-Participating in an EMA study could impact negatively on the participant's in his/her social environment. If using a dedicated device, participant could have to deal with questions of the need to carry the device. This might create feelings of stigma if the study was on a socially sensitive topic e.g.) psychiatric well-being or suicide ideation. 
+Participating in an EMA study could impact negatively on the participant's in
+his/her social environment. If using a dedicated device, participant could have
+to deal with questions of the need to carry the device. This might create
+feelings of stigma if the study was on a socially sensitive topic e.g.)
+psychiatric well-being or suicide ideation.
 
-Or the design of the device might not be compatible with the lifestyle of the participant, e.g. a fashion-conscious female participant might be less than enamored with the chunky design of a wearable activity sensor. Furthermore, the participants have to remember to have the device on hand during the period of data collection, sometimes even during sleep (e.g. actigraphy)
+Or the design of the device might not be compatible with the lifestyle of the
+participant, e.g. a fashion-conscious female participant might be less than
+enamored with the chunky design of a wearable activity sensor. Furthermore, the
+participants have to remember to have the device on hand during the period of
+data collection, sometimes even during sleep (e.g. actigraphy)
 
-Also, in a subjective EMA study design, participants have to attend to multiple alerts. These alerts might occur at an inconvenient social moment.  
+Also, in a subjective EMA study design, participants have to attend to multiple
+alerts. These alerts might occur at an inconvenient social moment.
 
 
 ## Points to consider
 
-* Internet access: For example, consider 1) continuous or partial internet access during data collection, 2) whether participants require a certain amount of mobile data or access to WIFI, and 3) the required security of the Network used. 
+  - Internet access: For example, consider 1) continuous or partial internet
+    access during data collection, 2) whether participants require a certain
+    amount of mobile data or access to WIFI, and 3) the required security of the
+    Network used.
 
-*  Mode of delivery 1: EMA can be collected with a designated app, or via a web-based questionnaire for which a notification for completion of the survey is send via an email or SMS
+  - Mode of delivery 1: EMA can be collected with a designated app, or via a
+    web-based questionnaire for which a notification for completion of the
+    survey is send via an email or SMS
 
-*  Mode of delivery 2: It is possible to make use of participants’ own devices (fitness device, tablet, smartphone) or borrow them a designated device
+  - Mode of delivery 2: It is possible to make use of participants’ own devices
+    (fitness device, tablet, smartphone) or borrow them a designated device
 
-* Choosing the right mode of delivery: Consider possible issues such as 1) software updates, 2) compatibility issues if using participants device, 3) whether EMA data needs to be stored locally (because of lack of internet access) before it can be uploaded to the central system and the storage capacity of the device this requires.
+  - Choosing the right mode of delivery: Consider possible issues such as 1)
+    software updates, 2) compatibility issues if using participants device, 3)
+    whether EMA data needs to be stored locally (because of lack of internet
+    access) before it can be uploaded to the central system and the storage
+    capacity of the device this requires.
 
-* Stigma: Issue of “stigma” of participating in an EMA study e.g. need to explain the carrying/wearing of a device that might not complement participants’ look/lifestyle.
+  - Stigma: Issue of “stigma” of participating in an EMA study e.g. need to
+    explain the carrying/wearing of a device that might not complement
+    participants’ look/lifestyle.
 
-In a nutshell, before implementing an EMA study, it is advisable to do a pilot study using your own device. This will allow the researcher to experience the possible inconveniences faced by participants. And, make sure there is a Plan B!
+In a nutshell, before implementing an EMA study, it is advisable to do a pilot
+study using your own device. This will allow the researcher to experience the
+possible inconveniences faced by participants. And, make sure there is a Plan
+B!
